deploy: dcbbb395f60f4ca49eb1b8a479872998ae2b219d

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <h3><a href=https://incubyteco.github.io/blog/writing-a-blog/ title="Writing a Blog Post" class=post-title>Writing a Blog Post</a></h3>
 <p class=card-text>Hello World This is a demo post.
 This is normal text.
-System.out.println("Hello Incubyte!"); print("Hi") This is normal text.</p>
+System.out.println("Hello Incubyte!"); print("Hello") This is normal text.</p>
 <a href=https://incubyteco.github.io/blog/writing-a-blog/ title="Read more - Writing a Blog Post" class="btn btn-primary btn-sm">Read more</a>
 </div>
 </div>
