--- a/index.html
+++ b/index.html
@@ -94,18 +94,6 @@
 <div class=row>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
-<img src=/images/logo.png alt="Writing a Blog Post" class="card-img rounded-lg mb-4">
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/writing-a-blog/ title="Writing a Blog Post" class=post-title>Writing a Blog Post</a></h3>
-<p class=card-text>Hello World This is a demo post.
-This is normal text.
-System.out.println("Hello Incubyte!"); print("Hello") This is normal text.</p>
-<a href=https://incubyteco.github.io/blog/writing-a-blog/ title="Read more - Writing a Blog Post" class="btn btn-primary btn-sm">Read more</a>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
 <img src=/images/2020/08/depositphotos_14942465-stock-photo-copy-paste-keyboard.jpg alt="!Copy and paste code to minimize the impact:" class="card-img rounded-lg mb-4">
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/97-things-not-to-do-as-developers/ title="!Copy and paste code to minimize the impact:" class=post-title>!Copy and paste code to minimize the impact:</a></h3>
@@ -121,6 +109,16 @@ System.out.println("Hello Incubyte!"); print("Hello") This is normal text.</p>
 <h3><a href=https://incubyteco.github.io/blog/do-not-fall-for-faux-agile/ title="!Fall for faux agile:" class=post-title>!Fall for faux agile:</a></h3>
 <p class=card-text>Enough ink is already spilled on this topic, nevertheless talking about it once again may not hurt.</p>
 <a href=https://incubyteco.github.io/blog/do-not-fall-for-faux-agile/ title="Read more - !Fall for faux agile:" class="btn btn-primary btn-sm">Read more</a>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<img src="https://images.unsplash.com/photo-1510751190565-de07085fcad6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Get so busy that you stop learning" class="card-img rounded-lg mb-4">
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/get-so-busy-that-you-stop-learning/ title="!Get so busy that you stop learning" class=post-title>!Get so busy that you stop learning</a></h3>
+<p class=card-text>Learning is the most vital part of a software developer&rsquo;s life. Being so busy that one stops learning is neither desirable nor helpful to one&rsquo;s career.</p>
+<a href=https://incubyteco.github.io/blog/get-so-busy-that-you-stop-learning/ title="Read more - !Get so busy that you stop learning" class="btn btn-primary btn-sm">Read more</a>
 </div>
 </div>
 </div>
@@ -151,7 +149,7 @@ System.out.println("Hello Incubyte!"); print("Hello") This is normal text.</p>
 <a href=/page/2/ aria-label=Next class=page-link role=button><span aria-hidden=true>&#187;</span></a>
 </li>
 <li class=page-item>
-<a href=/page/9/ aria-label=Last class=page-link role=button><span aria-hidden=true>&#187;&#187;</span></a>
+<a href=/page/8/ aria-label=Last class=page-link role=button><span aria-hidden=true>&#187;&#187;</span></a>
 </li>
 </ul>
 </div>
