--- a/index.html
+++ b/index.html
@@ -98,127 +98,166 @@
 <div class=col-md-6>
 <h2><a href=https://incubyteco.github.io/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h2>
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!</p>
-<a href=https://incubyteco.github.io/blog/why-incubyte/ title="Read more - Why Incubyte?" class="btn btn-primary">Read more</a>
+<a href=https://incubyteco.github.io/blog/why-incubyte/ title=" - Why Incubyte?" class="btn
+btn-primary">Read more</a>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/97-things-not-to-do-as-developers/>
 <img src=/images/2020/08/depositphotos_14942465-stock-photo-copy-paste-keyboard.jpg alt="!Copy and paste code to minimize the impact:" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/97-things-not-to-do-as-developers/ title="!Copy and paste code to minimize the impact:" class=post-title>!Copy and paste code to minimize the impact:</a></h3>
-<p class=card-text>Have you ever seen code in your module, which was so complex that you decided to copy and paste it entirely rather than changing it to accommodate your requirement?</p>
-<a href=https://incubyteco.github.io/blog/97-things-not-to-do-as-developers/ title="Read more - !Copy and paste code to minimize the impact:" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Have you ever seen code in your module, which was so complex that you decided to copy and paste it entirely rather than changing it to accommodate your requirement?
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/do-not-fall-for-faux-agile/>
 <img src="https://images.unsplash.com/photo-1586892478377-bb79da0a70c2?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Fall for faux agile:" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/do-not-fall-for-faux-agile/ title="!Fall for faux agile:" class=post-title>!Fall for faux agile:</a></h3>
-<p class=card-text>Enough ink is already spilled on this topic, nevertheless talking about it once again may not hurt.</p>
-<a href=https://incubyteco.github.io/blog/do-not-fall-for-faux-agile/ title="Read more - !Fall for faux agile:" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Enough ink is already spilled on this topic, nevertheless talking about it once again may not hurt.
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/get-so-busy-that-you-stop-learning/>
 <img src="https://images.unsplash.com/photo-1510751190565-de07085fcad6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Get so busy that you stop learning" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/get-so-busy-that-you-stop-learning/ title="!Get so busy that you stop learning" class=post-title>!Get so busy that you stop learning</a></h3>
-<p class=card-text>Learning is the most vital part of a software developer&rsquo;s life. Being so busy that one stops learning is neither desirable nor helpful to one&rsquo;s career.</p>
-<a href=https://incubyteco.github.io/blog/get-so-busy-that-you-stop-learning/ title="Read more - !Get so busy that you stop learning" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Learning is the most vital part of a software developer&rsquo;s life. Being so busy that one stops learning is neither desirable nor helpful to one&rsquo;s career.
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/do-not-optimize-prematurely/>
 <img src="https://images.unsplash.com/photo-1506818144585-74b29c980d4b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Optimize Prematurely" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/do-not-optimize-prematurely/ title="!Optimize Prematurely" class=post-title>!Optimize Prematurely</a></h3>
-<p class=card-text>Once again, you would think that the software development community has moved past this point, but I still get many teammates who want to &ldquo;save memory&rdquo; using HashMaps instead of POJOs.</p>
-<a href=https://incubyteco.github.io/blog/do-not-optimize-prematurely/ title="Read more - !Optimize Prematurely" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Once again, you would think that the software development community has moved past this point, but I still get many teammates who want to &ldquo;save memory&rdquo; using HashMaps instead of POJOs.
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
 <img src=/ alt="!Release code without automated tests" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
-<p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things</p>
-<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="Read more - !Release code without automated tests" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/do-not-show-separate-estimate-for-testing/>
 <img src="https://images.unsplash.com/photo-1516534775068-ba3e7458af70?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Show separate estimate for unit testing" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/do-not-show-separate-estimate-for-testing/ title="!Show separate estimate for unit testing" class=post-title>!Show separate estimate for unit testing</a></h3>
-<p class=card-text>Once I was asked in an interview (I was the interviewer!) What do you do in situations where the customers don’t want you to write test cases, or they want you to deprioritize the activity of writing test cases.</p>
-<a href=https://incubyteco.github.io/blog/do-not-show-separate-estimate-for-testing/ title="Read more - !Show separate estimate for unit testing" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Once I was asked in an interview (I was the interviewer!) What do you do in situations where the customers don’t want you to write test cases, or they want you to deprioritize the activity of writing test cases.
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/>
 <img src=/images/2021/06/Picture1.jpg alt="12 Books Developers Must Read" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/ title="12 Books Developers Must Read" class=post-title>12 Books Developers Must Read</a></h3>
-<p class=card-text>Books are a massive source of knowledge. Before we list all the books here, we want to discuss why we think it&rsquo;s essential for programmers to read them.</p>
-<a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/ title="Read more - 12 Books Developers Must Read" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/careers>Careers</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>Books are a massive source of knowledge. Before we list all the books here, we want to discuss why we think it&rsquo;s essential for programmers to read them.
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/>
 <img src=/images/2021/05/1.oss-1.jpg alt="Benefits and Challenges of Open-Source Development" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/ title="Benefits and Challenges of Open-Source Development" class=post-title>Benefits and Challenges of Open-Source Development</a></h3>
-<p class=card-text>Open-source software (OSS) is the holy grail for developers. It is a hub of innovation through intense collaboration in this era of agile software development.</p>
-<a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/ title="Read more - Benefits and Challenges of Open-Source Development" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/open-source>Open Source</a></span>
+<p class=card-text>Open-source software (OSS) is the holy grail for developers. It is a hub of innovation through intense collaboration in this era of agile software development.
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/>
 <img src=/images/2021/06/Picture1-clean-agile-1.jpg alt="Clean Agile with Uncle Bob: A Summary" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/ title="Clean Agile with Uncle Bob: A Summary" class=post-title>Clean Agile with Uncle Bob: A Summary</a></h3>
-<p class=card-text>An overview: I recently attended an online session on Clean Agile, organized by O’Reilly publication.And guess who was the speaker?</p>
-<a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/ title="Read more - Clean Agile with Uncle Bob: A Summary" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>An overview: I recently attended an online session on Clean Agile, organized by O’Reilly publication.And guess who was the speaker?
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
 <img src=/ alt="Do not assume that technical debt is a problem with your code" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
-<p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.</p>
-<a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Read more - Do not assume that technical debt is a problem with your code" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/feedback/>
 <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="Feedback & Rapid Prototyping" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/feedback/ title="Feedback & Rapid Prototyping" class=post-title>Feedback & Rapid Prototyping</a></h3>
-<p class=card-text>&ldquo;No fixed direction remains valid for long&rdquo; - Extreme Programming Explained by Kent Beck</p>
-<a href=https://incubyteco.github.io/blog/feedback/ title="Read more - Feedback & Rapid Prototyping" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
+<p class=card-text>&ldquo;No fixed direction remains valid for long&rdquo; - Extreme Programming Explained by Kent Beck
+</p>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/>
 <img src=/images/2021/06/1_Making-your-first-oss-project.png alt="How to contribute to open-source project: A beginner's guide" class="card-img rounded-lg mb-4">
+</a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/ title="How to contribute to open-source project: A beginner's guide" class=post-title>How to contribute to open-source project: A beginner's guide</a></h3>
-<p class=card-text>Are you a first-time contributor? Are you wondering how to start contributing to OSS? Well, this guide is made for you.</p>
-<a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/ title="Read more - How to contribute to open-source project: A beginner's guide" class="btn btn-primary btn-sm">Read more</a>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/open-source>Open Source</a></span>
+<p class=card-text>Are you a first-time contributor? Are you wondering how to start contributing to OSS? Well, this guide is made for you.
+</p>
 </div>
 </div>
 </div>
