deploy: af3f6d5ba62a4de70369a0c3be52bd3837df716f

--- a/index.html
+++ b/index.html
@@ -112,6 +112,33 @@ btn-primary">Read more</a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
+<a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
+<img src=/images/2021/04/technical-debt.jpg alt="Do not assume that technical debt is a problem with your code" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
+<img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
 <a href=https://incubyteco.github.io/blog/97-things-not-to-do-as-developers/>
 <img src=/images/2020/08/depositphotos_14942465-stock-photo-copy-paste-keyboard.jpg alt="!Copy and paste code to minimize the impact:" class="card-img rounded-lg mb-4">
 </a>
@@ -158,19 +185,6 @@ btn-primary">Read more</a>
 <h3><a href=https://incubyteco.github.io/blog/do-not-optimize-prematurely/ title="!Optimize Prematurely" class=post-title>!Optimize Prematurely</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
 <p class=card-text>Once again, you would think that the software development community has moved past this point, but I still get many teammates who want to &ldquo;save memory&rdquo; using HashMaps instead of POJOs.
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
-<img src=/ alt="!Release code without automated tests" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
 </p>
 </div>
 </div>
@@ -224,20 +238,6 @@ btn-primary">Read more</a>
 <h3><a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/ title="Clean Agile with Uncle Bob: A Summary" class=post-title>Clean Agile with Uncle Bob: A Summary</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>An overview: I recently attended an online session on Clean Agile, organized by O’Reilly publication.And guess who was the speaker?
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
-<img src=/ alt="Do not assume that technical debt is a problem with your code" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
-<p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.
 </p>
 </div>
 </div>
