deploy: 0f4af8f7b54492495c38444ebbd46bc09ae787ef

--- a/index.html
+++ b/index.html
@@ -112,92 +112,13 @@ btn-primary">Read more</a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
-<a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
-<img src=/images/2021/04/technical-debt.jpg alt="Do not assume that technical debt is a problem with your code" class="card-img rounded-lg mb-4">
+<a href=https://incubyteco.github.io/blog/one-year-of-incubyte/>
+<img src=/images/2021/07/1-year-blog-01.jpg alt="One Year Of Pandemic & One Year Of Incubyte" class="card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
-<p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
-<img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/97-things-not-to-do-as-developers/>
-<img src=/images/2020/08/depositphotos_14942465-stock-photo-copy-paste-keyboard.jpg alt="!Copy and paste code to minimize the impact:" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/97-things-not-to-do-as-developers/ title="!Copy and paste code to minimize the impact:" class=post-title>!Copy and paste code to minimize the impact:</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Have you ever seen code in your module, which was so complex that you decided to copy and paste it entirely rather than changing it to accommodate your requirement?
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/do-not-fall-for-faux-agile/>
-<img src="https://images.unsplash.com/photo-1586892478377-bb79da0a70c2?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Fall for faux agile:" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/do-not-fall-for-faux-agile/ title="!Fall for faux agile:" class=post-title>!Fall for faux agile:</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Enough ink is already spilled on this topic, nevertheless talking about it once again may not hurt.
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/get-so-busy-that-you-stop-learning/>
-<img src="https://images.unsplash.com/photo-1510751190565-de07085fcad6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Get so busy that you stop learning" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/get-so-busy-that-you-stop-learning/ title="!Get so busy that you stop learning" class=post-title>!Get so busy that you stop learning</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Learning is the most vital part of a software developer&rsquo;s life. Being so busy that one stops learning is neither desirable nor helpful to one&rsquo;s career.
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/do-not-optimize-prematurely/>
-<img src="https://images.unsplash.com/photo-1506818144585-74b29c980d4b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Optimize Prematurely" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/do-not-optimize-prematurely/ title="!Optimize Prematurely" class=post-title>!Optimize Prematurely</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Once again, you would think that the software development community has moved past this point, but I still get many teammates who want to &ldquo;save memory&rdquo; using HashMaps instead of POJOs.
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
-<a href=https://incubyteco.github.io/blog/do-not-show-separate-estimate-for-testing/>
-<img src="https://images.unsplash.com/photo-1516534775068-ba3e7458af70?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="!Show separate estimate for unit testing" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/do-not-show-separate-estimate-for-testing/ title="!Show separate estimate for unit testing" class=post-title>!Show separate estimate for unit testing</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Once I was asked in an interview (I was the interviewer!) What do you do in situations where the customers don’t want you to write test cases, or they want you to deprioritize the activity of writing test cases.
+<h3><a href=https://incubyteco.github.io/blog/one-year-of-incubyte/ title="One Year Of Pandemic & One Year Of Incubyte" class=post-title>One Year Of Pandemic & One Year Of Incubyte</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
+<p class=card-text>It all started when— unbeknownst to the world, a series of lockdowns changed the way India Inc.
 </p>
 </div>
 </div>
@@ -218,19 +139,6 @@ btn-primary">Read more</a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
-<a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/>
-<img src=/images/2021/05/1.oss-1.jpg alt="Benefits and Challenges of Open-Source Development" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/ title="Benefits and Challenges of Open-Source Development" class=post-title>Benefits and Challenges of Open-Source Development</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/open-source>Open Source</a></span>
-<p class=card-text>Open-source software (OSS) is the holy grail for developers. It is a hub of innovation through intense collaboration in this era of agile software development.
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
 <a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/>
 <img src=/images/2021/06/Picture1-clean-agile-1.jpg alt="Clean Agile with Uncle Bob: A Summary" class="card-img rounded-lg mb-4">
 </a>
@@ -244,19 +152,6 @@ btn-primary">Read more</a>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
-<a href=https://incubyteco.github.io/blog/feedback/>
-<img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="Feedback & Rapid Prototyping" class="card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/feedback/ title="Feedback & Rapid Prototyping" class=post-title>Feedback & Rapid Prototyping</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
-<p class=card-text>&ldquo;No fixed direction remains valid for long&rdquo; - Extreme Programming Explained by Kent Beck
-</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
 <a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/>
 <img src=/images/2021/06/1_Making-your-first-oss-project.png alt="How to contribute to open-source project: A beginner's guide" class="card-img rounded-lg mb-4">
 </a>
@@ -264,6 +159,117 @@ btn-primary">Read more</a>
 <h3><a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/ title="How to contribute to open-source project: A beginner's guide" class=post-title>How to contribute to open-source project: A beginner's guide</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/open-source>Open Source</a></span>
 <p class=card-text>Are you a first-time contributor? Are you wondering how to start contributing to OSS? Well, this guide is made for you.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/>
+<img src=/images/2021/05/1.oss-1.jpg alt="Benefits and Challenges of Open-Source Development" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/ title="Benefits and Challenges of Open-Source Development" class=post-title>Benefits and Challenges of Open-Source Development</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/open-source>Open Source</a></span>
+<p class=card-text>Open-source software (OSS) is the holy grail for developers. It is a hub of innovation through intense collaboration in this era of agile software development.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
+<img src=/images/2021/04/technical-debt.jpg alt="Do not assume that technical debt is a problem with your code" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/techniques-for-an-agile-team/>
+<img src=/images/2021/01/Agile-Scrum-Methodology-13-Best-Practices-For-Agile-Teams.jpg alt="Ideas for Successful Agile Teams" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/techniques-for-an-agile-team/ title="Ideas for Successful Agile Teams" class=post-title>Ideas for Successful Agile Teams</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/getting-started>Getting Started</a></span>
+<p class=card-text>Agile is the most discussed software development methodology , and probably most widely accepted as the way forward for modern software development.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/notalltestsarethesame/>
+<img src="https://images.unsplash.com/photo-1570215170761-f056128eda48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxMTc3M3wwfDF8c2VhcmNofDN8fHFhfGVufDB8fHw&ixlib=rb-1.2.1&q=80&w=2000" alt="Not All Tests are the Same" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/notalltestsarethesame/ title="Not All Tests are the Same" class=post-title>Not All Tests are the Same</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>On multiple occasions, I have worked on projects where I learned how critical testing is and that not all tests are the same.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/>
+<img src=/images/2021/05/1_Coverpage.jpg alt="Remote Onboarding & Immersion at Incubyte" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/ title="Remote Onboarding & Immersion at Incubyte" class=post-title>Remote Onboarding & Immersion at Incubyte</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/careers>Careers</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/jobs>Jobs</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/getting-started>Getting Started</a></span>
+<p class=card-text>Employee onboarding is the important process of introducing newly hired employees to the organisation. It is everything that leads up to the employee&rsquo;s total immersion into the organisation&rsquo;s culture.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/the-battle-of-source-control/>
+<img src=/images/2020/10/The-Battle-2.jpg alt="The Battle of Source Control" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/the-battle-of-source-control/ title="The Battle of Source Control" class=post-title>The Battle of Source Control</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>git pull origin develop git checkout -b feature/shiny-new-branch It&rsquo;s the start of a sprint, and you have picked up a new User Story.
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/why-incubyte/>
+<img src=/images/2020/10/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg alt="Why Incubyte?" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!
+</p>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<div class="card border-0">
+<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
+<img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
+<p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
 </p>
 </div>
 </div>
