deploy: d6aa40713fe0e0af6943b9e0df943966f6dac68b

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 </div>
 <div class=col-md-6>
 <h2><a href=https://incubyteco.github.io/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h2>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<span class="mb-1 badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
+<span class="mb-1 badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!</p>
 <a href=https://incubyteco.github.io/blog/why-incubyte/ title=" - Why Incubyte?" class="btn
 btn-primary">Read more</a>
@@ -113,7 +113,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/one-year-of-incubyte/>
-<img src=/images/2021/07/1-year-blog-01.jpg alt="One Year Of Pandemic & One Year Of Incubyte" class="card-img rounded-lg mb-4">
+<img src=/images/2021/07/1-year-blog-01.jpg alt="One Year Of Pandemic & One Year Of Incubyte" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/one-year-of-incubyte/ title="One Year Of Pandemic & One Year Of Incubyte" class=post-title>One Year Of Pandemic & One Year Of Incubyte</a></h3>
@@ -126,7 +126,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/>
-<img src=/images/2021/06/Picture1.jpg alt="12 Books Developers Must Read" class="card-img rounded-lg mb-4">
+<img src=/images/2021/06/Picture1.jpg alt="12 Books Developers Must Read" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/ title="12 Books Developers Must Read" class=post-title>12 Books Developers Must Read</a></h3>
@@ -140,7 +140,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/>
-<img src=/images/2021/06/Picture1-clean-agile-1.jpg alt="Clean Agile with Uncle Bob: A Summary" class="card-img rounded-lg mb-4">
+<img src=/images/2021/06/Picture1-clean-agile-1.jpg alt="Clean Agile with Uncle Bob: A Summary" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/ title="Clean Agile with Uncle Bob: A Summary" class=post-title>Clean Agile with Uncle Bob: A Summary</a></h3>
@@ -153,7 +153,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/>
-<img src=/images/2021/06/1_Making-your-first-oss-project.png alt="How to contribute to open-source project: A beginner's guide" class="card-img rounded-lg mb-4">
+<img src=/images/2021/06/1_Making-your-first-oss-project.png alt="How to contribute to open-source project: A beginner's guide" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/ title="How to contribute to open-source project: A beginner's guide" class=post-title>How to contribute to open-source project: A beginner's guide</a></h3>
@@ -166,7 +166,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/>
-<img src=/images/2021/05/1.oss-1.jpg alt="Benefits and Challenges of Open-Source Development" class="card-img rounded-lg mb-4">
+<img src=/images/2021/05/1.oss-1.jpg alt="Benefits and Challenges of Open-Source Development" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/ title="Benefits and Challenges of Open-Source Development" class=post-title>Benefits and Challenges of Open-Source Development</a></h3>
@@ -179,7 +179,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
-<img src=/images/2021/04/technical-debt.jpg alt="Do not assume that technical debt is a problem with your code" class="card-img rounded-lg mb-4">
+<img src=/images/2021/04/technical-debt.jpg alt="Do not assume that technical debt is a problem with your code" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/ title="Do not assume that technical debt is a problem with your code" class=post-title>Do not assume that technical debt is a problem with your code</a></h3>
@@ -193,7 +193,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/techniques-for-an-agile-team/>
-<img src=/images/2021/01/Agile-Scrum-Methodology-13-Best-Practices-For-Agile-Teams.jpg alt="Ideas for Successful Agile Teams" class="card-img rounded-lg mb-4">
+<img src=/images/2021/01/Agile-Scrum-Methodology-13-Best-Practices-For-Agile-Teams.jpg alt="Ideas for Successful Agile Teams" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/techniques-for-an-agile-team/ title="Ideas for Successful Agile Teams" class=post-title>Ideas for Successful Agile Teams</a></h3>
@@ -208,7 +208,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/notalltestsarethesame/>
-<img src="https://images.unsplash.com/photo-1570215170761-f056128eda48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxMTc3M3wwfDF8c2VhcmNofDN8fHFhfGVufDB8fHw&ixlib=rb-1.2.1&q=80&w=2000" alt="Not All Tests are the Same" class="card-img rounded-lg mb-4">
+<img src="https://images.unsplash.com/photo-1570215170761-f056128eda48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxMTc3M3wwfDF8c2VhcmNofDN8fHFhfGVufDB8fHw&ixlib=rb-1.2.1&q=80&w=2000" alt="Not All Tests are the Same" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/notalltestsarethesame/ title="Not All Tests are the Same" class=post-title>Not All Tests are the Same</a></h3>
@@ -221,7 +221,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/>
-<img src=/images/2021/05/1_Coverpage.jpg alt="Remote Onboarding & Immersion at Incubyte" class="card-img rounded-lg mb-4">
+<img src=/images/2021/05/1_Coverpage.jpg alt="Remote Onboarding & Immersion at Incubyte" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/ title="Remote Onboarding & Immersion at Incubyte" class=post-title>Remote Onboarding & Immersion at Incubyte</a></h3>
@@ -237,7 +237,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/the-battle-of-source-control/>
-<img src=/images/2020/10/The-Battle-2.jpg alt="The Battle of Source Control" class="card-img rounded-lg mb-4">
+<img src=/images/2020/10/The-Battle-2.jpg alt="The Battle of Source Control" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/the-battle-of-source-control/ title="The Battle of Source Control" class=post-title>The Battle of Source Control</a></h3>
@@ -250,7 +250,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/why-incubyte/>
-<img src=/images/2020/10/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg alt="Why Incubyte?" class="card-img rounded-lg mb-4">
+<img src=/images/2020/10/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg alt="Why Incubyte?" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/why-incubyte/ title="Why Incubyte?" class=post-title>Why Incubyte?</a></h3>
@@ -264,7 +264,7 @@ btn-primary">Read more</a>
 <div class="col-lg-4 col-sm-6 mb-5">
 <div class="card border-0">
 <a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
-<img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="card-img rounded-lg mb-4">
+<img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="mb-1 card-img rounded-lg mb-4">
 </a>
 <div class="card-body p-0">
 <h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
