--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class=container>
 <div class=row>
 <div class="col-12 mb-5 pb-5">
-<div class="row align-items-center">
+<article class="row align-items-center">
 <div class="col-md-6 mb-4 mb-md-0">
 <a href=https://incubyteco.github.io/blog/why-incubyte/>
 <img src=/images/2020/10/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg alt="Why Incubyte?" class="img-fluid rounded-lg w-100">
@@ -108,10 +108,10 @@
 <a href=https://incubyteco.github.io/blog/why-incubyte/ title=" - Why Incubyte?" class="btn
 btn-primary">Read more</a>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/one-year-of-incubyte/>
 <img src=/images/2021/07/1-year-blog-01.jpg alt="One Year Of Pandemic & One Year Of Incubyte" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -121,10 +121,10 @@ btn-primary">Read more</a>
 <p class=card-text>It all started when— unbeknownst to the world, a series of lockdowns changed the way India Inc.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/books-we-believe-should-be-on-your-bookshelf-and-read-them-too/>
 <img src=/images/2021/06/Picture1.jpg alt="12 Books Developers Must Read" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -135,10 +135,10 @@ btn-primary">Read more</a>
 <p class=card-text>Books are a massive source of knowledge. Before we list all the books here, we want to discuss why we think it&rsquo;s essential for programmers to read them.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/clean-agile-with-uncle-bob-a-summary/>
 <img src=/images/2021/06/Picture1-clean-agile-1.jpg alt="Clean Agile with Uncle Bob: A Summary" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -148,10 +148,10 @@ btn-primary">Read more</a>
 <p class=card-text>An overview: I recently attended an online session on Clean Agile, organized by O’Reilly publication.And guess who was the speaker?
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/how-to-contribute-to-open-source-project-a-beginners-guide/>
 <img src=/images/2021/06/1_Making-your-first-oss-project.png alt="How to contribute to open-source project: A beginner's guide" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -161,10 +161,10 @@ btn-primary">Read more</a>
 <p class=card-text>Are you a first-time contributor? Are you wondering how to start contributing to OSS? Well, this guide is made for you.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/benefits-and-challenges-of-open-source-development/>
 <img src=/images/2021/05/1.oss-1.jpg alt="Benefits and Challenges of Open-Source Development" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -174,10 +174,10 @@ btn-primary">Read more</a>
 <p class=card-text>Open-source software (OSS) is the holy grail for developers. It is a hub of innovation through intense collaboration in this era of agile software development.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/do-not-assume-that-technical-debt-is-a-problem-with-your-code/>
 <img src=/images/2021/04/technical-debt.jpg alt="Do not assume that technical debt is a problem with your code" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -188,10 +188,10 @@ btn-primary">Read more</a>
 <p class=card-text>Ever saw SonarQube laden with thousands of maintainability and security issues? Looking at those dashboards, we often believe we&rsquo;re looking at the code&rsquo;s state, but there is more to it.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/techniques-for-an-agile-team/>
 <img src=/images/2021/01/Agile-Scrum-Methodology-13-Best-Practices-For-Agile-Teams.jpg alt="Ideas for Successful Agile Teams" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -203,10 +203,10 @@ btn-primary">Read more</a>
 <p class=card-text>Agile is the most discussed software development methodology , and probably most widely accepted as the way forward for modern software development.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/notalltestsarethesame/>
 <img src="https://images.unsplash.com/photo-1570215170761-f056128eda48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxMTc3M3wwfDF8c2VhcmNofDN8fHFhfGVufDB8fHw&ixlib=rb-1.2.1&q=80&w=2000" alt="Not All Tests are the Same" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -216,10 +216,10 @@ btn-primary">Read more</a>
 <p class=card-text>On multiple occasions, I have worked on projects where I learned how critical testing is and that not all tests are the same.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/>
 <img src=/images/2021/05/1_Coverpage.jpg alt="Remote Onboarding & Immersion at Incubyte" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -232,10 +232,10 @@ btn-primary">Read more</a>
 <p class=card-text>Employee onboarding is the important process of introducing newly hired employees to the organisation. It is everything that leads up to the employee&rsquo;s total immersion into the organisation&rsquo;s culture.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/the-battle-of-source-control/>
 <img src=/images/2020/10/The-Battle-2.jpg alt="The Battle of Source Control" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -245,10 +245,10 @@ btn-primary">Read more</a>
 <p class=card-text>git pull origin develop git checkout -b feature/shiny-new-branch It&rsquo;s the start of a sprint, and you have picked up a new User Story.
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/why-incubyte/>
 <img src=/images/2020/10/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg alt="Why Incubyte?" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -259,10 +259,10 @@ btn-primary">Read more</a>
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class="col-lg-4 col-sm-6 mb-5">
-<div class="card border-0">
+<article class="card border-0">
 <a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
 <img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="mb-1 card-img rounded-lg mb-4">
 </a>
@@ -272,7 +272,7 @@ btn-primary">Read more</a>
 <p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
 </p>
 </div>
-</div>
+</article>
 </div>
 <div class=col-12>
 <ul class="pagination pagination-default">
