deploy: bf5a57423189c0c7319cd1ed5a6ac63425d1ec5d

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <title>404 Page not found</title>
 <base href=https://incubyteco.github.io/>
 <meta name=author content="Incubyte">
-<meta name=generator content="Hugo 0.86.1">
+<meta name=generator content="Hugo 0.87.0">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel=stylesheet>
@@ -86,7 +86,6 @@ Work
 <div class=dropdown-menu>
 <a class=dropdown-item href=https://incubyte.co/design-and-develop title="Software Development">Software Development</a>
 <a class=dropdown-item href=https://www.incubyte.co/enhance-and-modernize title="Software Modernization">Software Modernization</a>
-<a class=dropdown-item href=https://www.incubyte.co/enhance-and-modernize title="Software Quality Assessment">Software Quality Assessment</a>
 </div>
 </li>
 <li class=nav-item>
@@ -107,13 +106,13 @@ Work
 </div>
 </div>
 </div>
-</section><style>footer{background-color:#0e3252;color:#fff}u{text-transform:uppercase;text-decoration:none;border-bottom:#aeb8c0 2px dotted;border-width:thin;word-spacing:.2em}footer a{color:#fff!important}footer p{color:#fff}</style>
+</section><style>:root{--footer-fg-color:#364554}footer{background-color:#f1f1f2;color:var(--footer-fg-color)}u{text-transform:uppercase;text-decoration:none;border-bottom:#aeb8c0 2px dotted;border-width:thin;word-spacing:.2em}footer a{color:var(--footer-fg-color)!important}footer p{color:var(--footer-fg-color)}</style>
 <footer class="bg-custom section pb-0">
 <div class=container>
 <div class=row>
 <div class="col-md-3 col-sm-6 mb-5">
 <a class="d-block h3 mb-3" href=https://incubyteco.github.io/>
-<img width=200px class=img-fluid src=/images/logo.svg alt="Incubyte Blog">
+<img width=200px class=img-fluid src=/images/logo.png alt="Incubyte Blog">
 </a>
 <p class=mb-4>Crafting Software Products For Today and Tomorrow.</p>
 </div>
@@ -123,7 +122,6 @@ Work
 <li><a href=https://incubyte.co/why-incubyte title="Why Incubyte">Why Incubyte</a></li>
 <li><a href=https://www.incubyte.co/events title=Events>Events</a></li>
 <li><a href=https://incubyte.co/inspiration title=Inspiration!>Inspiration!</a></li>
-<li><a href=https://www.incubyte.co/careers title=Careers>Careers</a></li>
 </ul>
 </div>
 <div class="col-md-3 col-sm-6 mb-5">
@@ -131,7 +129,6 @@ Work
 <ul class="list-unstyled footer-list">
 <li><a href=https://www.incubyte.co/design-and-deveop title="Software Development">Software Development</a></li>
 <li><a href=https://www.incubyte.co/enhance-and-modernize title="Software Modernization">Software Modernization</a></li>
-<li><a href=https://www.incubyte.co/enhance-and-modernize title="Software Quality Assessment">Software Quality Assessment</a></li>
 </ul>
 </div>
 <div class="col-md-3 col-sm-6 mb-5">
