deploy: 668b2e63c8bd24b659bd39ffd01554570cbad9f4

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Incubyte Blog</title>
 <base href=https://incubyteco.github.io/>
 <meta name=author content="Incubyte">
-<meta name=generator content="Hugo 0.87.0">
+<meta name=generator content="Hugo 0.88.1">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel=stylesheet>
@@ -127,6 +127,22 @@ Resources
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!</p>
 <a href=https://incubyteco.github.io/blog/why-incubyte/ title=" -
                         Why Incubyte?" class="btn btn-main-art btn-primary">Read more</a>
+</div>
+</article>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<article class="card border-0">
+<a href=https://incubyteco.github.io/blog/tdd-assessment/>
+<img src=/images/2021/09/laptop-plant.jpg alt="Incubyte TDD Assessment" class="mb-1 card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/tdd-assessment/ title="Incubyte TDD Assessment" class=post-title>Incubyte TDD Assessment</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/careers>Careers</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/tdd>TDD</a></span>
+<p class=card-text>Incubyte TDD Assessment Hello there and Welcome to the Incubyte TDD Assessment!
+First of all we want to thank you for deciding to take this assessment, we are going to do our best to make this assessment full of learning and fun for you.
+</p>
 </div>
 </article>
 </div>
@@ -278,19 +294,6 @@ Resources
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!
-</p>
-</div>
-</article>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<article class="card border-0">
-<a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/>
-<img src=/images/2020/09/automated-tests.jpg alt="!Release code without automated tests" class="mb-1 card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/release-code-without-automated-tests/ title="!Release code without automated tests" class=post-title>!Release code without automated tests</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-to-do>97 Things !to do</a></span>
-<p class=card-text>Most projects that I see facing serious problems lack tests. You should write tests for two things
 </p>
 </div>
 </article>
